<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:text="@string/usager_selectionnee"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_user_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nbTonnes"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_nb_tonnes"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tonnes"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_select_date" />

            <EditText
                android:id="@+id/ed_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:inputType="date"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:text="@string/field_selectionnee"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_field_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="36sp" />

        <Button
            android:id="@+id/bt_save_tonnage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/save_tonnage"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="117dp"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tonnage_need_to_send"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/nbToSend"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:text="@string/_0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_syncToCloud"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/synchroniser_les_tonnages" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_get_users"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/syncUsers" />

                <Button
                    android:id="@+id/bt_get_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sync_fields" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>